changed linting & made changes according to new rules

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/garrettsutula/nodejs-patterns#readme",
   "devDependencies": {
-    "eslint": "^5.1.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0",
     "mocha": "^5.2.0"
   }
 }
